--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,18 @@ after_success:
   - docker push rbotla/multi-server
   - docker push rbotla/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-918700838480"
+  bucket_path: "multi-docker"
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
+
 language: generic 
